test-results/error_end_scope.err
[33m./examples/error_end_scope.cup:82:12: warning: [0] Restricted access to node.parent detected in macro. Direct upwards AST access is discouraged. Use 'upp.inScope' or 'upp.atRoot' for robust transformations.[0m
int main() {
           [33m^[0m
[33m./examples/error_end_scope.cup:82:5: warning: [0] Restricted access to node.rootNode detected in macro. Direct upwards AST access is discouraged. Use 'upp.inScope' or 'upp.atRoot' for robust transformations.[0m
int main() {
    [33m^[0m
[33m./examples/error_end_scope.cup:86:5: warning: [0] Restricted access to node.parent detected in macro. Direct upwards AST access is discouraged. Use 'upp.inScope' or 'upp.atRoot' for robust transformations.[0m
    {
    [33m^[0m
[33m./examples/error_end_scope.cup:82:12: warning: [0] Restricted access to node.parent detected in macro. Direct upwards AST access is discouraged. Use 'upp.inScope' or 'upp.atRoot' for robust transformations.[0m
int main() {
           [33m^[0m
[33m./examples/error_end_scope.cup:82:12: warning: [0] Restricted access to node.parent detected in macro. Direct upwards AST access is discouraged. Use 'upp.inScope' or 'upp.atRoot' for robust transformations.[0m
int main() {
           [33m^[0m
examples/error_end_scope.c: In function ‘main’:
examples/error_end_scope.c:28:9: error: ‘nested’ undeclared (first use in this function)
   28 |  { free(nested); nested = ((void*)0); }
      |         ^~~~~~
examples/error_end_scope.c:28:9: note: each undeclared identifier is reported only once for each function it appears in
